# ScreenshotFaker

./: .gitattributes  .gitignore  LICENSE  README.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/fake/screenshot/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: xposed_init
app/src/main/cpp/: CMakeLists.txt  auxiliary.h  daemon.cpp  screenshot.cpp
app/src/main/cpp/libssh2/: LICENSE
app/src/main/cpp/openssl/: README.md
app/src/main/java/fake/screenshot/: Auxiliary.kt  ConfigManager.kt  DaemonManager.kt  MainActivity.kt  ScreenshotFaker.kt
app/src/main/java/fake/screenshot/pages/: AboutPage.kt  ApplicationPage.kt  DaemonStatusPage.kt  ExtensionPage.kt  GalleryPage.kt  HomePage.kt  ReceiveScreenSharingPage.kt  SettingsPage.kt
app/src/main/java/fake/screenshot/services/: ScreenRecordTileService.kt  ScreenshotTileService.kt
app/src/main/java/fake/screenshot/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: array.xml  strings.xml  themes.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/test/java/fake/screenshot/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
