cmake_minimum_required(VERSION 3.22.1)
project("ScreenshotFakerNative")
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(OPENSSL_DIR ${CMAKE_SOURCE_DIR}/openssl)
set(LIBSSH2_DIR ${CMAKE_SOURCE_DIR}/libssh2)
add_executable(daemon daemon.cpp auxiliary.h)
set_target_properties(daemon PROPERTIES SUFFIX ".so")
target_include_directories(daemon PRIVATE ${OPENSSL_DIR}/include)
target_include_directories(daemon PRIVATE ${LIBSSH2_DIR}/include)
target_compile_options(daemon PRIVATE -fPIE -flto -fvisibility=hidden -ffunction-sections -fdata-sections)
target_link_options(daemon PRIVATE -pie -flto -Wl,--gc-sections -Wl,--strip-all -Wl,--exclude-libs,ALL -Wl,--discard-all)
target_link_libraries(daemon ${LIBSSH2_DIR}/lib/${ANDROID_ABI}/libssh2.a ${OPENSSL_DIR}/lib/${ANDROID_ABI}/libcrypto.a z -pthread)